Added navbar and navbar container

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   <title>Assignment 1</title>
 
   <!-- materialize style sheet-->
-  <link
-    type="text/css"
-    rel="stylesheet"
-    href="styles/materialize/css/materialize.min.css"
-    media="screen,projection"
-  />
+  <link type="text/css" rel="stylesheet" href="styles/materialize/css/materialize.min.css" media="screen,projection" />
   <!-- personal stylesheet-->
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
 </head>
+
 <body>
+  <!-- Top Bar -->
+  <nav id="top-bar" class="grey lighten-1">
+    <div class="nav-wrapper container">
+      <a href="/index.html" id="logo-container" class="brand-logo">Assignment 1</a>
+    </div>
+  </nav><!-- #top-bar end -->
   <h1>Hello</h1>
 </body>
