--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 </head>
 
 <body>
-  <!-- Top Bar -->
-  <nav id="top-bar" class="grey lighten-1">
+  <!-- Nav Bar -->
+  <nav id="nav-bar" class="grey">
     <div class="nav-wrapper container">
       <a href="/index.html" id="logo-container" class="brand-logo">Assignment 1</a>
+      <!-- Nav Links -->
+      <ul id="nav-links" class="right hide-on-med-and-down">
+        <li><a href="#">Quymbee</a></li>
+        <li><a href="#">David</a></li>
+      </ul><!-- #nav-links end -->
     </div>
-  </nav><!-- #top-bar end -->
+  </nav><!-- #nav-bar end -->
   <h1>Hello</h1>
 </body>
