create official home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
       <li><a href="pages/david.html">David</a></li>
     </ul>
     <!-- #mobile-nav-links end -->
-    <h1>Hello</h1>
+    <div class="container center">
+      <h3 style="margin-bottom: 4rem">Welcome, friend 👋</h3>
+      <div style="display: flex; flex-direction: column">
+        <a
+          href="/assignment1/pages/david.html"
+          class="waves-effect waves-light btn-large red accent-2"
+          style="margin-bottom: 1rem"
+          >David's Page</a
+        >
+        <a
+          href="/assignment1/pages/quymbee.html"
+          class="waves-effect waves-light btn-large cyan darken-1"
+          >Quymbee's Page</a
+        >
+      </div>
+    </div>
   </body>
 </html>
