--- a/pages/quymbee.html
+++ b/pages/quymbee.html
@@ -20,6 +20,12 @@
 
     <!-- personal stylesheet-->
     <link rel="stylesheet" type="text/css" href="../styles/style.css" />
+
+    <style>
+      body {
+        background: #e0f2f1;
+      }
+    </style>
   </head>
 
   <body>
