--- a/index.html
+++ b/index.html
@@ -45,10 +45,21 @@
 
     <!-- Mobile Nav Links -->
     <ul id="mobile-nav-links" class="sidenav">
-      <li><a href="pages/quymbee.html">Quymbee</a></li>
-      <li><a href="pages/david.html">David</a></li>
+      <li>
+        <a href="/assignment1/pages/david.html" class="red accent2 white-text"
+          >David</a
+        >
+      </li>
+      <li>
+        <a
+          href="/assignment1/pages/quymbee.html"
+          class="cyan darken1 white-text"
+          >Quymbee</a
+        >
+      </li>
     </ul>
     <!-- #mobile-nav-links end -->
+
     <div class="container center">
       <h3 style="margin-bottom: 4rem">Welcome, friend 👋</h3>
       <div style="display: flex; flex-direction: column">
@@ -65,5 +76,32 @@
         >
       </div>
     </div>
+
+    <!-- scripts starts here -->
+    <!--Import jQuery before materialize.js-->
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="styles/materialize/js/materialize.min.js"
+    ></script>
+
+    <script>
+      $(document).ready(function () {
+        $(".sidenav").sidenav({
+          menuWidth: 400,
+          edge: "left",
+          draggable: true,
+          onOpen: function () {
+            console.log("menu open");
+          },
+          onClose: function () {
+            console.log("menu close");
+          },
+        });
+      });
+    </script>
   </body>
 </html>
