--- a/pages/quymbee.html
+++ b/pages/quymbee.html
@@ -88,7 +88,7 @@
               </div>
               <div class="row custom-center">
                 <div class="col s8" style="text-align: right">
-                  <h6 style="font-weight: bold">Favorite animal</h6>
+                  <h6 style="font-weight: bold">Favorite animal:</h6>
                 </div>
                 <div class="col s4"><p>Snow Leopard</p></div>
               </div>
