Change nav color on about david page

--- a/pages/david.html
+++ b/pages/david.html
@@ -25,7 +25,7 @@
 
 <body>
   <!-- Nav Bar -->
-  <nav id="nav-bar" class="teal">
+  <nav id="nav-bar" class="red accent-2">
     <div class="nav-wrapper container">
       <a href="#" data-target="mobile-nav-links" class="sidenav-trigger"
         ><i class="material-icons">menu</i></a
